--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,12 @@
-language: scala
+language: java
 sudo: false
 jdk:
   - oraclejdk8
 script:
-  - sbt +test
-cache:
-  directories:
-    - $HOME/.ivy2/cache
-before_cache:
-  # Ensure changes to the cache aren't persisted
-  - rm -rf $HOME/.ivy2/cache/sample.chirper/*
-  # Delete all ivydata files since ivy touches them on each build
-  - find $HOME/.ivy2/cache -name "ivydata-*.properties" | xargs rm
+  - mvn test -B
 notifications:
   webhooks:
     urls:
         - https://webhooks.gitter.im/e/773aba95141768c32dae
     on_success: always
     on_failure: always
-
