--- a/chirp-impl/src/main/resources/application.conf
+++ b/chirp-impl/src/main/resources/application.conf
@@ -1,1 +1,7 @@
 play.modules.enabled += sample.chirper.chirp.impl.ChirpModule
+
+chirp.cassandra.keyspace = chirp
+
+cassandra-journal.keyspace = ${chirp.cassandra.keyspace}
+cassandra-snapshot-store.keyspace = ${chirp.cassandra.keyspace}
+lagom.persistence.read-side.cassandra.keyspace = ${chirp.cassandra.keyspace}
