--- a/friend-impl/src/main/resources/application.conf
+++ b/friend-impl/src/main/resources/application.conf
@@ -1,1 +1,7 @@
 play.modules.enabled += sample.chirper.friend.impl.FriendModule
+
+friend.cassandra.keyspace = friend
+
+cassandra-journal.keyspace = ${friend.cassandra.keyspace}
+cassandra-snapshot-store.keyspace = ${friend.cassandra.keyspace}
+lagom.persistence.read-side.cassandra.keyspace = ${friend.cassandra.keyspace}
