--- a/front-end/pom.xml
+++ b/front-end/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.lightbend.lagom.sample.chirper</groupId>
-        <artifactId>activator-lagom-java-chirper</artifactId>
+        <artifactId>lagom-java-chirper</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
