--- a/load-test-api/pom.xml
+++ b/load-test-api/pom.xml
@@ -4,8 +4,8 @@
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-      <groupId>com.lightbend.lagom.sample.chirper</groupId>
-      <artifactId>activator-lagom-java-chirper</artifactId>
+        <groupId>com.lightbend.lagom.sample.chirper</groupId>
+        <artifactId>lagom-java-chirper</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
