Put back missing cache dir for ivy in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
 cache:
   directories:
     - $HOME/.m2
+    - $HOME/.ivy2/cache
 before_cache:
   # Ensure changes to the cache aren't persisted
   - rm -rf $HOME/.m2/repository/com/lightbend/lagom/sample/chirper
