Fix chirper maven build to more closely match SBT install script and update versions

--- a/activity-stream-impl/pom.xml
+++ b/activity-stream-impl/pom.xml
@@ -102,7 +102,7 @@
                         <image>
                             <build>
                                 <entryPoint>
-                                    java -cp '/maven/*' -Dplay.crypto.secret="${APPLICATION_SECRET:-none}" -Dhttp.address="$ACTIVITY_STREAM_BIND_IP" -Dhttp.port="$ACTIVITY_STREAM_BIND_PORT" play.core.server.ProdServerStart
+                                    java -cp '/maven/*' -Dplay.crypto.secret="${APPLICATION_SECRET:-none}" -Dhttp.address="$ACTIVITYSERVICE_BIND_IP" -Dhttp.port="$ACTIVITYSERVICE_BIND_PORT" play.core.server.ProdServerStart
                                 </entryPoint>
                             </build>
                         </image>
