--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-plugin-transform-react-jsx": "^6.24.1"
+  },
+  "scripts": {
+    "babel": "babel"
   }
 }
