--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,12 +6,18 @@
     "type": "git",
     "url": "https://github.com/lagom/activator-lagom-java-chirper.git"
   },
-  "license": "Apache 2",
+  "license": "Apache-2.0",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-plugin-transform-react-jsx": "^6.24.1"
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "webpack": "^2.6.1"
   },
-  "scripts": {
-    "babel": "babel"
+  "dependencies": {
+    "history": "^1.17.0",
+    "jquery": "^3.2.1",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
+    "react-router": "^1.0.3"
   }
 }
