--- a/load-test-impl/pom.xml
+++ b/load-test-impl/pom.xml
@@ -59,9 +59,10 @@
             <artifactId>lagom-javadsl-testkit_2.11</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Service Locator Provider -->
         <dependency>
-            <groupId>com.typesafe.conductr</groupId>
-            <artifactId>${conductr.lib.name}</artifactId>
+            <groupId>${serviceLocator.provider.groupName}</groupId>
+            <artifactId>${serviceLocator.provider.artifactName}</artifactId>
         </dependency>
     </dependencies>
 
