--- a/activity-stream-impl/src/main/resources/application.conf
+++ b/activity-stream-impl/src/main/resources/application.conf
@@ -1,1 +1,18 @@
 play.modules.enabled += sample.chirper.activity.impl.ActivityStreamModule
+
+
+service-locator-dns {
+  name-translators = [
+    {
+      "^_.+$" = "$0",
+      "^.*$" = "_http-lagom-api._tcp.$0.default.svc.cluster.local"
+    }
+  ]
+
+  srv-translators = [
+    {
+      "^_http-lagom-api[.]_tcp[.](.+)$" = "_http-lagom-api._http.$1",
+      "^.*$" = "$0"
+    }
+  ]
+}
