--- a/front-end/pom.xml
+++ b/front-end/pom.xml
@@ -46,9 +46,10 @@
             <groupId>com.typesafe.play</groupId>
             <artifactId>play-netty-server_2.11</artifactId>
         </dependency>
+        <!-- Service Locator Provider -->
         <dependency>
-            <groupId>com.typesafe.conductr</groupId>
-            <artifactId>${conductr.lib.name}</artifactId>
+            <groupId>${serviceLocator.provider.groupName}</groupId>
+            <artifactId>${serviceLocator.provider.artifactName}</artifactId>
         </dependency>
     </dependencies>
 
