--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,25 @@
 
     <build>
         <plugins>
+          <plugin>
+          		<groupId>org.apache.maven.plugins</groupId>
+          		<artifactId>maven-antrun-plugin</artifactId>
+          		<version>1.7</version>
+          		<executions>
+          		    <execution>
+          		        <phase>validate</phase>
+          		          <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                          <target>
+                            <echo>Build target: ${buildTarget}</echo>
+                            <echo>Service Locator provided by: ${serviceLocator.provider.groupName}.${serviceLocator.provider.artifactName}:${serviceLocator.provider.artifactVersion}</echo>
+                          </target>
+                        </configuration>
+          		    </execution>
+          		</executions>
+          	</plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.6</version>
@@ -100,11 +119,6 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
-            <dependency>
-                <groupId>com.typesafe.conductr</groupId>
-                <artifactId>${conductr.lib.name}</artifactId>
-                <version>1.9.1</version>
-            </dependency>
             <!-- front-end webjars -->
             <dependency>
                 <groupId>org.webjars</groupId>
@@ -131,13 +145,60 @@
                 <artifactId>jquery</artifactId>
                 <version>2.2.4</version>
             </dependency>
+            <!-- Service Locator Provider -->
+            <dependency>
+                <groupId>${serviceLocator.provider.groupName}</groupId>
+                <artifactId>${serviceLocator.provider.artifactName}</artifactId>
+                <version>${serviceLocator.provider.artifactVersion}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
         <lagom.version>1.3.4</lagom.version>
+        <!--
         <conductr.lib.name>lagom1-java-conductr-bundle-lib_2.11</conductr.lib.name>
+        -->
     </properties>
+
+
+    <repositories>
+      <repository>
+        <id>akka-dns</id>
+        <name>akka-dns</name>
+        <url>https://dl.bintray.com/hajile/maven</url>
+        <snapshots>
+          <enabled>false</enabled>
+        </snapshots>
+      </repository>
+    </repositories>
+
+    <profiles>
+      <profile>
+        <id>conductr</id>
+        <properties>
+          <buildTarget>conductr</buildTarget>
+          <serviceLocator.provider.groupName>com.typesafe.conductr</serviceLocator.provider.groupName>
+          <serviceLocator.provider.artifactName>lagom1-java-conductr-bundle-lib_2.11</serviceLocator.provider.artifactName>
+          <serviceLocator.provider.artifactVersion>1.9.1</serviceLocator.provider.artifactVersion>
+        </properties>
+        <activation>
+          <activeByDefault>false</activeByDefault>
+        </activation>
+      </profile>
+
+      <profile>
+        <id>kubernetes</id>
+        <properties>
+          <buildTarget>kubernetes</buildTarget>
+          <serviceLocator.provider.groupName>com.lightbend</serviceLocator.provider.groupName>
+          <serviceLocator.provider.artifactName>lagom-service-locator-dns_2.11</serviceLocator.provider.artifactName>
+          <serviceLocator.provider.artifactVersion>1.0.2</serviceLocator.provider.artifactVersion>
+        </properties>
+        <activation>
+          <activeByDefault>true</activeByDefault>
+        </activation>
+      </profile>
+    </profiles>
 </project>
