--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ cache:
   directories:
     - $HOME/.m2
     - $HOME/.ivy2/cache
+    - $HOME/.nvm
 before_cache:
   # Ensure changes to the cache aren't persisted
   - rm -rf $HOME/.m2/repository/com/lightbend/lagom/sample/chirper
