--- a/deploy/helm/examples/ibm-cloud-private/values.yaml
+++ b/deploy/helm/examples/ibm-cloud-private/values.yaml
@@ -1,4 +1,5 @@
 chirper:
+  imagePullSecret: regsecret
   cassandra:
     service: _cql._tcp.chirper-cassandra.default.svc.cluster.local
 
@@ -6,27 +7,27 @@ chirper:
     replicas: 2
     secret: SECRET
     image:
-      repo: ibmcode/chirper_activity-stream-impl
+      repo: mycluster.icp:8500/chirper/activity-stream-impl
       tag: 1.0-SNAPSHOT
 
   chirp:
     replicas: 2
     secret: SECRET
     image:
-      repo: ibmcode/chirper_chirp-impl
+      repo: mycluster.icp:8500/chirper/chirp-impl
       tag: 1.0-SNAPSHOT
 
   friend:
     replicas: 2
     secret: SECRET
     image:
-      repo: ibmcode/chirper_friend-impl
+      repo: mycluster.icp:8500/chirper/friend-impl
       tag: 1.0-SNAPSHOT
 
   front_end:
     replicas: 2
     image:
-      repo: ibmcode/chirper_front-end
+      repo: mycluster.icp:8500/chirper/front-end
       tag: 1.0-SNAPSHOT
 
   nginx:
