Setup CSP promiscuously on Play's filter

--- a/front-end/src/main/resources/application.conf
+++ b/front-end/src/main/resources/application.conf
@@ -2,3 +2,5 @@ play.crypto.secret = "changeme"
 play.crypto.secret = ${?APPLICATION_SECRET}
 
 include "platform.conf"
+
+play.filters.headers.contentSecurityPolicy = "connect-src *; style-src *;"
